2007-04-01  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/game_selector.py Sort game name columns numerically (Bug #417191)

2007-03-31  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/game_selector.py Make sure one game is always selected for restoring (Bug #422748)
	* src/lib/gnome_sudoku.py Remember window size when quitting (Bug #380780)

2007-03-25  Robert Ancell <robert.ancell@gmail.com>

	* Use string substitution using dictionary lookups when using ngettext to stop
	  substitution exceptions (Bug #409739)
	* src/lib/game_selector.py Handle corrupted high score entries (Bug #413848)
	* Removed dialog separators to be HIG compliant
	* src/lib/gsudoku.py Stop number pop-up from visibly moving when created
	* src/lib/gsudoku.py Stop number pop-up from being in taskbar list (Bug #406767)
	* src/lib/gnome_sudoku.py Change title name from 'Gnome Sudoku' to 'Sudoku' (Bug #410433)

2007-03-24  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/sudoku_maker.py Correctly mark game name as unicode so
	  can be split on character boundaries (Bug #409740)

2007-03-16  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/gsudoku.py Load random module (Bug #411073).
	* src/lib/game_selector.py Fix PyGtk tree selection bug (Bug #416063)
       	* src/lib/gnome_sudoku.py Fix undo tracker deletion (Bug #417805)
	* src/lib/sudoku_maker.py Handle exceptions loading pickled objects (Bug #408837)

2007-02-25  Thomas M. Hinkle  <thinkle@cvs.gnome.org>

	* src/lib/game_selector.py Fix display of games that were printed
	and "marked as played" in resume-game dialog.
	* src/lib/timer.py Handle games that don't have proper
	__absolute_start_time__ set gracefully. This is to account for
	games that are printed and marked-as-played, which don't have any
	timer information when they are restored. As a result, we put a
	check into toggle_timing which resets the timer if there is no
	__absolute_start_time__ set.
	* src/lib/saver.py Handle saved games with no tracker information