@@ -1,3 +1,7 @@
+2007-04-22  Robert Ancell <robert.ancell@gmail.com>
+
+	* src/lib/gnome_sudoku.py Catch exceptions when launching help (Bug #418193)
+
 2007-04-01  Robert Ancell <robert.ancell@gmail.com>
 
 	* src/lib/game_selector.py Sort game name columns numerically (Bug #417191)
